--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/mukarramarif/Beat-Shazam/issues"
   },
-  "homepage": "https://github.com/mukarramarif/Beat-Shazam#readme"
+  "homepage": "https://github.com/mukarramarif/Beat-Shazam#readme",
+  "dependencies": {
+    "better-sqlite3": "^9.6.0",
+    "express": "^4.19.2"
+  }
 }
