--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/mukarramarif/Beat-Shazam#readme",
   "dependencies": {
+    "ajax": "^0.0.4",
     "better-sqlite3": "^9.6.0",
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "fetch": "^1.1.0",
+    "jquery": "^3.7.1"
   }
 }
