--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "beat-shazam",
   "version": "1.0.0",
   "description": "Beat Shazam",
+  "type": "module",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
