--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ web_modules/
 package-lock.json
 # Optional eslint cache
 .eslintcache
-.env
+API_KEY.env
 # Optional stylelint cache
 .stylelintcache
 
